Bug 118313 - fourthTier: since the FTL disassembly hacks cannot distinguish between code and data, the LLVM disassembler symbol table callback should be able to deal gracefully with arbitrary garbage
Summary: fourthTier: since the FTL disassembly hacks cannot distinguish between code a...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords:
Depends on:
Blocks: 112840
  Show dependency treegraph
 
Reported: 2013-07-02 11:55 PDT by Filip Pizlo
Modified: 2013-07-02 12:01 PDT (History)
7 users (show)

See Also:


Attachments
the patch (3.16 KB, patch)
2013-07-02 11:56 PDT, Filip Pizlo
mhahnenberg: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Pizlo 2013-07-02 11:55:40 PDT
Patch forthcoming.
Comment 1 Filip Pizlo 2013-07-02 11:56:58 PDT
Created attachment 205933 [details]
the patch
Comment 2 Mark Hahnenberg 2013-07-02 11:58:57 PDT
Comment on attachment 205933 [details]
the patch

r=me
Comment 3 Filip Pizlo 2013-07-02 12:01:45 PDT
Landed in http://trac.webkit.org/changeset/152305