fourthTier: since the FTL disassembly hacks cannot distinguish between code and data, the LLVM disassembler symbol table callback should be able to deal gracefully with arbitrary garbage https://bugs.webkit.org/show_bug.cgi?id=118313

Reviewed by Mark Hahnenberg.

Give it a mode where we can still crash on unrecognized reference types, so that we might
implement them in the future, but by default just print some stuff and keep going.

* disassembler/LLVMDisassembler.cpp:
(JSC):
(JSC::symbolLookupCallback):

Canonical link: https://commits.webkit.org/137046@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153262 268f45cc-cd09-0410-ab3c-d52691b4dbfc